--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -15,7 +15,7 @@
       <img src="https://user-images.githubusercontent.com/43764894/223559747-e9d7f19d-91bf-46a9-a0cb-8d6a40d3cfa3.png" alt="netlify + hugo banner" role="presentation">
     </div>
     <h2>
-      This is a bare-bones Hugo project that has everything you need to quickly ASIDLHAJSDL:AS it to Netlify
+      This is a bare-bones workingasdasdasd Hugo project that has everything you need to quickly ASIDLHAJSDL:AS it to Netlify
     </h2>
     <div class="bttns">
       <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/hugo-quickstart" class="bttn primary">Deploy to Netlify</a>
@@ -36,18 +36,6 @@
     </ul>
   </div>
 </div>
-<form name="contact" method="POST" data-netlify="true">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" required>
-  
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
-  
-  <label for="message">Message:</label>
-  <textarea id="message" name="message" rows="4" required></textarea>
-  
-  <button type="submit">Send</button>
-</form>
 
         </div>
         <script>
